# rust_web_application

./: Cargo.toml  Makefile.toml  README.md  compose.yml
.github/workflows/: ci.yaml
adapter/migrations/: 20240309170404_start.down.sql  20240309170404_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: book.rs  user.rs
api/src/model/: auth.rs  book.rs  user.rs
api/src/route/: user.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/model/: id.rs  list.rs  mod.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/user/: event.rs
kernel/src/repository/: health.rs  user.rs
registry/src/: lib.rs
shared/src/: config.rs  error.rs
src/: main.rs
