[package]
name = "rust_web_application"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["macros"] }
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }

[[bin]]
name = "app"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.23.0"
