[package]
name = "rust_web_application"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }

anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["macros"] }
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }
rstest = "0.23.0"

[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

