[package]
name = "rust_web_application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }

anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["macros"] }
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
derive-new = "0.7.0"
uuid = {version="1.11.0", features = ["v4", "serde"]}
serde = {version="1.0.216", features = ["derive"]}
thiserror = "2.0.9"
utoipa = { version = "5.3.0", features = ["uuid", "axum_extras", "chrono"] }
chrono = {version = "0.4.39", default-features = false, features = ["serde"]}
secrecy = "0.10.3"
strum = { version = "0.26.3", features = ["derive"] }
mockall = "0.13.1"
redis = { version = "0.27.6", features = ["tokio-rustls-comp"] }
bcrypt = "0.16.0"
itertools = "0.14.0"
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["log"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio-stream = "0.1.17"
garde = { version = "0.21.0", features = ["derive", "email"] }


[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
utoipa.workspace = true
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio.workspace = true
tracing.workspace = true
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
opentelemetry = "0.27.1"
tracing-opentelemetry = "0.28.0"
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
