[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kernel.workspace = true
shared.workspace = true
registry.workspace = true
axum.workspace = true
derive-new.workspace = true
serde.workspace = true
utoipa.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tower.workspace = true
strum.workspace = true
axum-extra.workspace = true
tokio-stream.workspace = true
garde.workspace = true

[dev-dependencies]
anyhow.workspace = true
hyper = "1.5.2"
mockall.workspace = true
serde_json = "1.0.134"
rstest = "0.24.0"
